--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "description": "用 mongodb 非关系型数据库开发接口",
   "scripts": {
-    "dev": "nodemon ./bin/www",
-    "start": "set NODE_ENV=production && node ./bin/www",
+    "dev": "nodemon ./bin/www.js",
+    "prod": "set NODE_ENV=production && node ./bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,8 +21,10 @@
   "license": "ISC",
   "dependencies": {
     "koa": "^2.4.1",
+    "koa-body": "^2.5.0",
     "koa-bodyparser": "^4.2.0",
     "koa-router": "^7.3.0",
+    "koa-session": "^5.8.1",
     "mongodb": "^3.0.1",
     "mongoose": "^5.0.2"
   },
